OAK-11505 - Reduce object allocation in FullTextIndexEditor (#2098)